# fiaa-ai-video-recognition

./: .gitignore  README.md  _expression_detect.py  activity_detection.py  activity_detection_actions.py  app.py  facial_recognition.py  facial_recognition_side.py  gesture_recognition.py  processing_summary.txt  processing_summary_actions.txt  pyproject.toml  video_transcription.py
